Fix issue with footer covering content on mobile. However, a new issue has surfaced of a double scrollbar.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,24 +35,26 @@ body {
     height: 100%;
 }
 
+#root {
+    height: 100%;
+}
+
+#root > * {
+    overflow-x: hidden;
+    /* overflow-y: auto; */
+
+    position: relative;
+    flex: 1; /* Have all  children elements of the root take up the same amount of space */
+    /* display: flex;
+    flex-direction: column; */
+}
+
 .flex-img-center {
     display: flex;
     justify-content: center;
     align-self: center;
 
     margin: 0 auto;
-}
-
-#root {
-    overflow-x: hidden;
-    overflow-y: auto;
-    position: relative;
-    /* display: flex;
-    flex-direction: column; */
-    /* padding-bottom: 150px; was 100 or */
-    flex: 1;
-    display: flex;
-    flex-direction: column;
 }
 
 .no-padding {
@@ -91,7 +93,8 @@ main.page-content {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    margin-bottom: 120px; /* Height of footer */
+    /* margin-bottom: 120px;  */
+    /* Height of footer */
 }
 
 /* == React Router Transition */
@@ -468,7 +471,7 @@ div.needAQuote-box {
 /* === FOOTER === */
 footer {
     font-size: 0.8em;
-    margin-top: 1%;
+    /* margin-top: 1%; */
     padding: 0% 5%;
     position: relative;
     text-align: center;
